# Hats

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  beet-release.json  beet-release.yml  beet-web.yml  beet.json  beet.yml  commit_parser.py  hat_registry.yml  pack.mcmeta  pyproject.toml  tasks.py  tbump.toml
.github/workflows/: create_release_on_version_tag.yml  gh-pages.yml  release.yml
animations/: dog.yml
data/hats/advancements/: fez.json  player_masks.json  root.json
data/hats/advancements/cats/: collect_all_cats.json  root.json
data/hats/advancements/glasses/: collect_all_glasses.json
data/hats/advancements/mario/: collect_all.json  root.json
data/hats/advancements/tophats/: collect_all_colored_tophats.json  get_monocle.json  root.json
data/hats/functions/: calc_rand_num.mcfunction  load.mcfunction  tick.mcfunction  uninstall.mcfunction
data/hats/functions/add_trades/: favorite_cat.mcfunction  librarian.mcfunction  special.mcfunction
data/hats/functions/dress_mobs/: calc_rand_num.mcfunction  drowned.mcfunction  (+8 more)
datapack/: pack.mcmeta
docs/api/: hats.json  hats_by_category.json
docs/api/lang/: de_de.json  en_us.json
generator/: cli.py  generate_base_item_models.py  generate_fix_tree.py  generate_hat_loot_tables.py  generate_special_hat_loot_tables.py  localization.py  loot_tables.py  main.py  minify_functions.py  minify_json_files.py  registry.py
hats/: hats.py  options.py  registry.yml  utils.py
hats/macros/: advancements.json
hats/plugins/: api.py  configuration.py  datapack_advancement.py  devtools.py  hat_loot_tables.py  hat_recipes.py  item_models.py  jinja.py
hats/registries/: hats.py  recipes.py  settings.py  tags.py
hats/registry/: hat_recipes.py  hat_recipes.yml  hat_tags.py  hat_tags.yml  hats.py  hats.yml  settings.py  settings.yml  tags.yml
hats/scripts/: extract_slots_from_screenshots.py
hats/semantic_release/: parser_hats.py
hats/templates/advancements/: datapack_author.json  datapack_installed.json
hats/templates/loot_tables/: random_from_collection.json
hats/templates/models/: leather_helmet.json  stick.json  warped_fungus_on_a_stick.json
jinja/templates/loot_tables/: all_from_collection.json  hat.json
resourcepack/: pack.mcmeta
src/: categories.yml  cmds.yml  hats.yml  recipes.yml  settings.yml  tags.yml
(+1403 files in other folders)
