[tool.poetry]
name = "hats"
version = "2.3.1"
description = ""
authors = ["Oran9eUtan <oran9eutan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
pre-commit = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
clevercsv = "^0.6.7"
cleo = "^0.8.1"
mcanitexgen = "^1.0.0"
babelbox = "^1.0.1"
tbump = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95

[tool.isort]
line_length = 95
