[tool.poetry]
name = "hats"
version = "3.2.0"
description = ""
authors = ["Oran9eUtan <oran9eutan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
pre-commit = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
clevercsv = "^0.6.7"
cleo = "^0.8.1"
tbump = "^6.3.1"
mcanitexgen = "^1.2.1"
beet = "^0.35.0"
Jinja2 = "^3.0.1"
babelbox = "^2.1.2"
python-semantic-release = "^7.16.2"
opencv-contrib-python = "^4.5.2"
Pillow = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.semantic_release]
branch="release"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "beet.yml:(\\d+\\.\\d+\\.\\d+)"
major_on_zero = false
build_command = "python -m beet -c beet-release.yml"
dist_path = "dist"
upload_to_pypi = false
upload_to_release = true
commit_parser="hats.semantic_release.parser_hats.parse_commit_message"
changelog_sections=["hat", "feature", "fix", "balancing", "breaking", "documentation", "performance"]
